# armlab_gz

./: .gitignore  armlab_gui.ui  control_station.py  kinematics.py  trajectory_planner.py  ui.py
dynamixel/: dynamixel_AX.py  dynamixel_MX.py  dynamixel_XL.py  test_rexarm_class.py
gazebo/: CMakeLists.txt  c_client.cpp  cubefactory_plugin.cc  gzclient.py  rexarm.world  rexarm_plugin.cc  setup.sh  trjmarker_plugin.cc
gazebo/models/camera_kinect/: camera_kinect.sdf  model.config
gazebo/models/gripper/: gripper.sdf  model.config
gazebo/models/gripper/meshes/: AX_12A.dae  gp_base.dae  gp_finger.dae  gp_link_inner.dae  gp_link_outter.dae
gazebo/models/ground_with_visual_plugin/: ground_with_visual_plugin.sdf  model.config
gazebo/models/rexarm/: model.config  rexarm.sdf
gazebo/models/rexarm/meshes/: base.dae  elbow.dae  shoulder1.dae  shoulder2.dae  wrist.dae
gazebo/models/rexarm_gripper/: model.config  rexarm_gripper.sdf
gazebo/msgs/: CMakeLists.txt  cube_info.pb.cc  cube_info.pb.h  cube_info.proto  pose.pb.cc  pose.pb.h  rexarm_poses.pb.cc  rexarm_poses.pb.h  rexarm_poses.proto
rexarm/: baseclass.py  gzrexarm.py  rexarm.py  rexarm_com.py
